--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 :root {
     --clr-home-primary: #f07575;
     --clr-home-secondary: steelblue;
+    --clr-button-color: #e6e6e6;
     --clr-home-neutral: #f9f9f9;
 }
 
