--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,27 @@
+button {
+    border-radius: 10px;
+    border: none;
+    background-color: #e6e6e6;
+    padding: 1rem;
+}
+
+.btn-create-room, .btn-join-room {
+    padding: 1rem;
+    border-radius: 10px;
+    color: var(--clr-home-neutral);
+    font-size: 2em;
+    text-align: center;
+    text-decoration: none;
+}
+
+.btn-create-room {
+    background-color: var(--clr-home-secondary);
+}
+
+.btn-join-room {
+    background-color: var(--clr-home-primary);
+}
+
 .bubbles {
     display: flex;
     align-items: center;
@@ -6,14 +30,26 @@
     gap: 10rem;
 }
 
-.create-bubble {
-    background-color: var(--clr-home-primary);
+.bubbles > * {
     padding: 22rem 9rem;
     border-radius: 22rem;
+    border: 2px solid;
+    box-shadow: 5px 5px rgba(0, 0, 0, 100%);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.create-bubble {
+    background-color: var(--clr-home-primary);
 }
 
 .join-bubble {
     background-color: var(--clr-home-secondary);
-    padding: 22rem 9rem;
-    border-radius: 22rem;
+}
+
+/* TODO: Doesn't work */
+.div-input-roomID {
+    display: flex;
+    gap: 0.4rem;
 }
