--- a/src/global.css
+++ b/src/global.css
@@ -17,3 +17,10 @@ h2,
 p {
     margin: 0;
 }
+
+button {
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: #e6e6e6;
+    padding: 1rem;
+}
