--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -46,12 +46,6 @@
 
 .div-input-roomID {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     gap: 0.4rem;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
 }
