refactor: Decompose props

--- a/src/pages/Creator/creator.css
+++ b/src/pages/Creator/creator.css
@@ -36,7 +36,7 @@
    color: white;
 }
 
-.btn-leave-room {
+.btn-reset-room {
     margin-top: 3rem;
     background-color: rgba(153,0,51, 100%);
     color: white;
