--- a/src/pages/Creator/creator.css
+++ b/src/pages/Creator/creator.css
@@ -1,3 +1,13 @@
+.creator-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+
+
 .div-video-file-dialog {
     display: flex;
     justify-content: center;
@@ -12,7 +22,7 @@
 }
 
 .div-video {
-    margin: 2rem 0;
+    /* margin: 2rem 0; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,8 +46,28 @@
    color: white;
 }
 
+.reset-section {
+    margin-top: 1rem;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 1rem;
+}
+
 .btn-reset-room {
-    margin-top: 3rem;
     background-color: rgba(153,0,51, 100%);
     color: white;
+}
+
+@media screen and (max-width: 850px) {
+
+    .creator-page > * {
+        width: 90%;
+    }
+    .div-video-file-dialog {
+        flex-direction: column;
+    }
+    .div-generate-room-id {
+        flex-direction: column;
+    }
 }
